Fix content area overflow issue

--- a/src/components/ContentArea/styles.scss
+++ b/src/components/ContentArea/styles.scss
@@ -1,8 +1,9 @@
 .content__ContentArea {
-  padding: 0 50px;
+  padding: 50px;
   height: calc(100dvh - 128px);
   display: flex;
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
+  overflow: auto;
 }
